app/views/components/player-name-expanded/player-name-expanded.styl
.player__name-expanded
  display flex
  .team
    margin-left 4px

.player__name-expanded-main
  align-items center
  display flex
  flex-direction column
  flex 1
  align-items flex-start
  width 100%
  margin-left 8px

.player__name-expanded-name:hover
  color $accentColor

.player__name-expanded-row
  flex 1
  white-space nowrap
  line-height 20px
  display flex
  align-items center

.player__name-expanded-action
  flex 0 0 50px
  display flex
  align-items center

.player__name-expanded-full-name
  flex 0 0 auto
  overflow hidden
  text-overflow ellipsis
  font-size 16px
  font-family 'IBM Plex Mono'

.player__name-expanded-game
  color rgba(0,0,0,0.7)
  font-size 12px
  margin-left 4px
  .clock
    color red
    padding 0 4px
  &.bye
    font-size 10px
    font-weight 600
    line-height 16px
    padding 0 8px
    background rgba(255,0,0,0.1)
    color red
    border 1px solid red
    border-radius 3px

@media (max-width 650px)
  .player__name-expanded.minimize
    .player__name-headshot
      display none

@media (max-width 600px)
  .player__name-expanded.minimize
    .position
    .team
      display none

    .player__name-expanded-game
      font-size 10px
      margin 0

    .player__name-expanded-full-name
      font-size 12px

